--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -57,6 +57,7 @@ img {
 
 .barimage {
   position: relative;
+  z-index: 1;
  
 }
 
